Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-19842

Crash while creating statistics for Spider table

    XMLWordPrintable

Details

    Description

      A user is seeing the following crash after upgrading to MariaDB 10.4.6:

      190623  0:59:58 [ERROR] mysqld got signal 11 ;
      This could be because you hit a bug. It is also possible that this binary
      or one of the libraries it was linked against is corrupt, improperly built,
      or misconfigured. This error can also be caused by malfunctioning hardware.
       
      To report this bug, see https://mariadb.com/kb/en/reporting-bugs
       
      We will try our best to scrape up some info that will hopefully help
      diagnose the problem, but since we have already crashed, 
      something is definitely wrong and this may fail.
       
      Server version: 10.4.6-MariaDB-1:10.4.6+maria~xenial-log
      key_buffer_size=134217728
      read_buffer_size=2097152
      max_used_connections=1
      max_threads=102
      thread_count=28
      It is possible that mysqld could use up to 
      key_buffer_size + (read_buffer_size + sort_buffer_size)*max_threads = 760240 K  bytes of memory
      Hope that's ok; if not, decrease some variables in the equation.
       
      Thread pointer: 0x7f6ff80009a8
      Attempting backtrace. You can use the following information to find out
      where mysqld died. If you see no messages after this, something went
      terribly wrong...
      stack_bottom = 0x7f70b0a76cf8 thread_stack 0x49000
      /usr/sbin/mysqld(my_print_stacktrace+0x2e)[0x56222273958e]
      /usr/sbin/mysqld(handle_fatal_signal+0x307)[0x5622221ce387]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x11390)[0x7f70cc099390]
      /usr/lib/mysql/plugin/ha_spider.so(_Z29spider_get_sys_table_sts_infoP5TABLEP13ha_statistics+0x12e)[0x7f70c405bdae]
      /usr/lib/mysql/plugin/ha_spider.so(_Z24spider_sys_get_table_stsP3THDPKcjP13ha_statisticsb+0x135)[0x7f70c405d7d5]
      /usr/lib/mysql/plugin/ha_spider.so(_Z14spider_get_stsP15st_spider_shareilP9ha_spiderdiiij+0xf8)[0x7f70c4097ac8]
      /usr/lib/mysql/plugin/ha_spider.so(_Z16spider_get_sharePKcP5TABLEP3THDP9ha_spiderPi+0x2b54)[0x7f70c40a2784]
      /usr/lib/mysql/plugin/ha_spider.so(_ZN9ha_spider4openEPKcij+0x53)[0x7f70c40b8413]
      /usr/sbin/mysqld(_ZN7handler7ha_openEP5TABLEPKcijP11st_mem_rootP4ListI6StringE+0x47)[0x5622221d2f97]
      /usr/sbin/mysqld(_Z21open_table_from_shareP3THDP11TABLE_SHAREPK25st_mysql_const_lex_stringjjjP5TABLEbP4ListI6StringE+0x749)[0x5622220763e9]
      /usr/sbin/mysqld(_Z10open_tableP3THDP10TABLE_LISTP18Open_table_context+0xbdd)[0x562221f584bd]
      /usr/sbin/mysqld(_Z11open_tablesP3THDRK14DDL_options_stPP10TABLE_LISTPjjP19Prelocking_strategy+0x11f0)[0x562221f5bb20]
      /usr/sbin/mysqld(_Z30open_normal_and_derived_tablesP3THDP10TABLE_LISTjj+0x59)[0x562221f5c309]
      /usr/sbin/mysqld(_Z18mysqld_list_fieldsP3THDP10TABLE_LISTPKc+0x2d)[0x56222201ce9d]
      /usr/sbin/mysqld(_Z16dispatch_command19enum_server_commandP3THDPcjbb+0x243e)[0x562221fc4f9e]
      /usr/sbin/mysqld(_Z10do_commandP3THD+0x11c)[0x562221fc54ec]
      /usr/sbin/mysqld(_Z24do_handle_one_connectionP7CONNECT+0x25a)[0x5622220a171a]
      /usr/sbin/mysqld(handle_one_connection+0x3d)[0x5622220a185d]
      /lib/x86_64-linux-gnu/libpthread.so.0(+0x76ba)[0x7f70cc08f6ba]
      x86_64/clone.S:111(clone)[0x7f70cb53641d]
       
      Trying to get some variables.
      Some pointers may be invalid and cause the dump to abort.
      Query (0x7f6ff800fda8): 
      Connection ID (thread ID): 29
      Status: NOT_KILLED
      

      Is this crash caused by the fix for MDEV-16249?

      Attachments

        Issue Links

          Activity

            People

              Kentoku Kentoku Shiba (Inactive)
              GeoffMontee Geoff Montee (Inactive)
              Votes:
              0 Vote for this issue
              Watchers:
              5 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: