MDEV-19842 Crash while creating statistics for Spider table